# polymorphism

./: .clang-format  .gitignore  CMakeLists.txt  README.md  polymorphism_wrapper.sh  polyphonic_wrapper.sh
ascii-art/: POLYPHONIC_1.txt  POLYPHONIC_DOLLAR.txt  canvas.txt  logo.txt  neofetch_logo.txt  polyphonic.txt  polyphonic1.txt  polyphonic2.txt  polyphonic3.txt  polyphonic4.txt  polyphonic5.txt  polyphonic6.txt  wide-padded-text-canvas.txt
ascii-art/renae/: dancer1.txt  dancer2.txt  dancer3.txt  dancer_1.txt  logo-canvas.txt  logo.txt  padded-logo.txt  palette.txt
src/: CMakeLists.txt  common.cpp  common.h  main.cpp
src/animations/: CMakeLists.txt  animation.cpp  animation.h  animations.h  boot.cpp  boot.h  char_fill.cpp  char_fill.h  code_scroll.cpp  code_scroll.h  colour_preview.cpp  colour_preview.h  coloured_cascade.cpp  coloured_cascade.h  diagonal_fill_wipe.cpp  diagonal_fill_wipe.h  dvd.cpp  dvd.h  fractal.cpp  fractal.h  fuzz_out.cpp  fuzz_out.h  game_of_life.cpp  game_of_life.h  hypnotic_waves.cpp  hypnotic_waves.h  line_wipe.cpp  line_wipe.h  lissajous.cpp  lissajous.h  moving_wipe.cpp  moving_wipe.h  neofetch.cpp  neofetch.h  pyramid.cpp  pyramid.h  renae_dancers.cpp  renae_dancers.h  retro_cascade.cpp  retro_cascade.h  (+20 more)
src/animations/todo/: game_of_life.cpp  game_of_life.h  shutterboard.cpp  shutterboard.h
src/util/: CMakeLists.txt  colours.cpp  colours.h  common.cpp  common.h
util/: emulate_crt.sh
